deps/jansson/test/suites/invalid/lone-open-brace/error.strip
1 1 1
string or '}' expected near end of file
